soka and crash tests hardening